@@ -9,7 +9,7 @@ local selection_tool = {
     {icon = data.raw["upgrade-item"]["upgrade-planner"].icon},
     {icon = "__core__/graphics/icons/any-quality.png", scale = 0.375},
   },
-  flags = {"not-stackable", "spawnable", "mod-openable"},
+  flags = {"only-in-cursor", "not-stackable"},
   subgroup = "tool",
   order = "c[automated-construction]-d[quality-upgrade-planner]",
   inventory_move_sound = item_sounds.planner_inventory_move,
@@ -58,7 +58,7 @@ local shortcut = {
   type = "shortcut",
   name = "give-quality-upgrade-planner",
   order = "b[blueprints]-k[quality-upgrade-planner]",
-  action = "spawn-item",
+  action = "lua",
   localised_name = {"shortcut.make-quality-upgrade-planner"},
 --associated_control_input = "give-quality-upgrade-planner",
   technology_to_unlock = "construction-robotics",
